--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
-    background-image: url('./assets/img/background.png');
+    background-image: url('../public/img/background.png');
     background-size: cover;
     background-repeat: no-repeat;
     font-synthesis: none;
